# surface-2019-20

./: .gitignore  .gitmodules  LICENSE  README.md  __main__.py  setup.py
assets/: README.md
assets/common_logger/: config.json  config_hardware.json  config_main.json  hardware_file_handler.py  restricted_file_handler.py  verbose_file_handler.py
docs/: README.md  STREAMING.md  TESTS  TESTS.md
documentation_example/code/: another.py  main.py
documentation_example/rstfiles/: Documentation.rst  Introduction.rst  Makefile  another.rst  conf.py  index.rst  main.rst
documentation_example/rstfiles/_build/doctrees/: Documentation.doctree  Introduction.doctree  environment.pickle  index.doctree  main.doctree
documentation_example/rstfiles/_build/html/: .buildinfo  Documentation.html  Introduction.html  genindex.html  index.html  main.html  objects.inv  py-modindex.html  search.html  searchindex.js
documentation_example/rstfiles/_build/html/_sources/: index.rst.txt
log/: README.md
src/: README.md  __init__.py
src/common/: README.md  __init__.py  data_manager.py  logger.py  statics.py  utils.py
src/comms/: README.md  __init__.py  connection.py  stream.py  utils.py
src/comms/streams/: __init__.py  buffered_socket.py  http_stream.py  rtsp_stream.py  utils.py  video_stream_reader.py
src/comms/streams/native/: CMakeLists.txt  __init__.py  build_win32.bat  main.cpp
src/computer_version/: cube_detection.py  square_detection_real.py
src/control/: README.md  __init__.py  autonomous.py  manual.py  model.py  statics.py  utils.py
src/gui/: .#loading.py  README.md  __init__.py  controller.py  home.py  indicator.py  loading.py  menu.py  sample.py  statics.py  streams.py  ui_sample.py  ui_sample_test.py  utils.py
src/gui/component/: __init__.py  cameras.py  indicator.py
src/gui/gui_process/: __init__.py  process_management.py  process_update.py
src/log/: README.md  __init__.py  config.json  logger.py
src/simulation/: .gitattributes  .gitignore  CMakeLists.txt  README.md  __init__.py  entityobjects.py  glwrappers.py  matutils.py  premake5.lua  rov_setup.json  rov_setup.txt  simcore.py  window.py
src/simulation/Dependencies/GLAD/include/glad/: glad.h
src/simulation/Dependencies/GLAD/src/: glad.c
src/simulation/Scripts/: build_turbojpeg.py
src/simulation/Simulation/: CMakeLists.txt
src/simulation/Simulation/res/models/: pool.mtl  rov.mtl
src/simulation/Simulation/res/shaders/: line.frag  line.vert  screen_quad.frag  screen_quad.vert  shader.frag  shader.vert  water_render.frag  water_render.vert
src/simulation/Simulation/src/: Camera.cpp  Camera.h  Common.h  Config.cpp  Config.h  LaunchCache.h  Scene.cpp  Scene.h  Shader.cpp  VertexArray.h  main.cpp
src/simulation/Simulation/src/graphics/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Material.h  Mesh.cpp  Mesh.h  RenderView.cpp  RenderView.h  RenderingEngine.cpp  RenderingEngine.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  World.h
src/simulation/Simulation/src/io/: Config.cpp  Config.h  Input.cpp  Input.h  LaunchCache.cpp  LaunchCache.h  Logger.cpp  Logger.h  ServerCore.cpp  ServerCore.h  ServerSocket.cpp  ServerSocket.h
src/simulation/Simulation/src/physics/: MotionIntegrators.h  PhysicsEngine.cpp  PhysicsEngine.h  Quaternion.h  RigidBody.cpp  RigidBody.h  Rotator.h  Transform.h
src/simulation/Simulation/src/physics/entities/: Entity.h  EntityCamera.cpp  EntityCamera.h  EntityGrid.cpp  EntityGrid.h  EntityObject.cpp  EntityObject.h  EntityROV.cpp  EntityROV.h  EntityRigidBody.cpp  EntityRigidBody.h  EntityWater.cpp  EntityWater.h  RovSetup.h
src/simulation/docs/: SETUP_EXAMPLE1.md  SETUP_EXAMPLE2.md
src/vision/: README.md  __init__.py  cube_detection.py  mussels.py  photomosaic.py  utils.py
tests/: README.md  __init__.py  __main__.py  log_test.py  log_tests.py  utils.py  vision_test.py
tests/assets/: README.md
